Added a lil pre-commit hook

--- a/bin/install
+++ b/bin/install
@@ -33,3 +33,9 @@ else
 fi
 
 echo "Done"
+
+echo "Copying pre-commit hook"
+
+ln ./bin/check-new-lines .git/hooks/pre-commit
+
+echo "Pre-commit hook copied!"
