Update install script

--- a/bin/install
+++ b/bin/install
@@ -36,6 +36,6 @@ echo "Done"
 
 echo "Copying pre-commit hook"
 
-ln ./bin/check-new-lines .git/hooks/pre-commit
+ln $(pwd)/bin/check-new-lines $(pwd)/.git/hooks/pre-commit
 
 echo "Pre-commit hook copied!"
